deploy: 8a8f33f1c2ea0f51547c7adde593ebe040211b7b

--- a/confuciy.html
+++ b/confuciy.html
@@ -15,4 +15,13 @@
 
 <!-- Yandex Webmaster -->
 <meta name="yandex-verification" content="d5a62848bcfac33f" />
-</head><body><header><nav class="nav-head"><a href="/" id="Стетхем">Стетхем</a><a href="/omarkhayam" id="Омар Хайям">Омар Хайям</a><a href="/confuciy" id="Конфуций">Конфуций</a></nav></header><main><hey class="hey-center"><div class="img-sage"><img src="/images/confuciy.jpg" alt="Confuciy" /></div></hey></main><footer id="footer"><p>Материал предназначен для лиц старше 18&nbsp;лет. Данный сайт сделан в юмористических целях. Весь материал собран из открытых источников сети интернета</p><div><a href="https://telegram.me/Severinz">По новым идеям пишите мне в Телеграм: @Severinz</a><a href="https://sirseverin.ru/">Читайте блог: sirseverin.ru</a><a href="https://drinkibri.ru/">Стетхем одобряет напитки Ибри drinkibri.ru</a></div><span><a href="https://github.com/diatom">© 2025. Сайт сделал Severin B. 👾</a></span></footer></body><script type="module" src="/browser.mjs" defer=""></script></html>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SN8QDEM5X7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SN8QDEM5X7');
+</script></head><body><header><nav class="nav-head"><a href="/" id="Стетхем">Стетхем</a><a href="/omarkhayam" id="Омар Хайям">Омар Хайям</a><a href="/confuciy" id="Конфуций">Конфуций</a></nav></header><main><hey class="hey-center"><div class="img-sage"><img src="/images/confuciy.jpg" alt="Confuciy" /></div></hey></main><footer id="footer"><p>Материал предназначен для лиц старше 18&nbsp;лет. Данный сайт сделан в юмористических целях. Весь материал собран из открытых источников сети интернета</p><div><a href="https://telegram.me/Severinz">По новым идеям пишите мне в Телеграм: @Severinz</a><a href="https://sirseverin.ru/">Читайте блог: sirseverin.ru</a><a href="https://drinkibri.ru/">Стетхем одобряет напитки Ибри drinkibri.ru</a></div><span><a href="https://github.com/diatom">© 2025. Сайт сделал Severin B. 👾</a></span></footer></body><script type="module" src="/browser.mjs" defer=""></script></html>
